// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer VideoPlayerAndroid render video with controls 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": undefined,
        "backgroundColor": "black",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={true}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="stretch"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "height": 0,
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "borderRadius": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 2,
          "position": "absolute",
          "right": 10,
          "top": "10%",
        }
      }
      testID="btn-fullscreen"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "MaterialIcons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`VideoPlayer VideoPlayerAndroid render video without controls if showControls is set to false 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": undefined,
        "backgroundColor": "black",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={false}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="stretch"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "height": 0,
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
  </View>,
]
`;

exports[`VideoPlayer hides the loading indicator after load 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": undefined,
        "backgroundColor": "black",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={true}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="stretch"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "height": undefined,
          "width": "100%",
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "borderRadius": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 2,
          "position": "absolute",
          "right": 10,
          "top": "10%",
        }
      }
      testID="btn-fullscreen"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "MaterialIcons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`VideoPlayer load a video and calculate the aspect ratio 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1.9494584837545126,
        "backgroundColor": "black",
        "justifyContent": "center",
      }
    }
  >
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={true}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="contain"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "aspectRatio": 1.9494584837545126,
          "height": undefined,
          "width": "100%",
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "borderRadius": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 2,
          "position": "absolute",
          "right": 10,
          "top": "10%",
        }
      }
      testID="btn-fullscreen"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "MaterialIcons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`VideoPlayer renders a loading indicator 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": undefined,
        "backgroundColor": "black",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={true}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="stretch"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "height": 0,
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "borderRadius": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 2,
          "position": "absolute",
          "right": 10,
          "top": "10%",
        }
      }
      testID="btn-fullscreen"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "MaterialIcons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`VideoPlayer shows the loading indicator if the source changes 1`] = `
[
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="fullscreen-modal"
    visible={false}
  />,
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": undefined,
        "backgroundColor": "black",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <ActivityIndicator
      color="white"
      size="large"
    />
    <Video
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      controls={true}
      focusable={true}
      muted={false}
      onClick={[Function]}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      paused={true}
      repeat={false}
      resizeMode="stretch"
      source={
        {
          "uri": "https://mendix.com/video.mp4",
        }
      }
      style={
        {
          "height": 0,
        }
      }
      testID="video-player-test"
      useTextureView={false}
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "borderRadius": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 2,
          "position": "absolute",
          "right": 10,
          "top": "10%",
        }
      }
      testID="btn-fullscreen"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "MaterialIcons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;
